--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "seed": "node scripts/seed.js"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
     "aws-cdk": "2.1029.3",
+    "esbuild": "^0.25.10",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.899.0",
+    "@aws-sdk/lib-dynamodb": "^3.899.0",
     "aws-cdk-lib": "^2.215.0",
-    "constructs": "^10.4.2"
+    "constructs": "^10.4.2",
+    "uuid": "^13.0.0"
   }
 }
