--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.899.0",
+    "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/lib-dynamodb": "^3.899.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
     "aws-cdk-lib": "^2.215.0",
     "constructs": "^10.4.2",
+    "csv-parser": "^3.2.0",
     "uuid": "^13.0.0"
   }
 }
