--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.899.0",
     "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/client-sns": "^3.907.0",
     "@aws-sdk/lib-dynamodb": "^3.899.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "aws-cdk-lib": "^2.215.0",
